<resources>
    <string name="app_name">ClearLink</string>

    <!--fragment_contact_list.xml-->
    <string name="fragmentContactList_title">ContactListFragment</string>

    <!--fragment_my_page.xml-->
    <string name="fragmentMyPage_title">MyPageFragment</string>

    <!--mypage_activity.xml-->
    <string name="textContactList">연락처</string>
    <string name="userName">이름</string>
    <string name="message">메시지</string>
    <string name="phoneCall">통화</string>
    <string name="email1">MAIL</string>
    <string name="textPhoneNumber">휴대전화</string>
    <string name="favorites">즐겨찾기</string>
    <string name="userPhoneNumber">010-1234-1234</string>
    <string name="textEmail">Email</string>
    <string name="userEmailAddress">team15@gmail.com</string>
    <string name="textMemo">Memo</string>
    <string name="userMemo">Memo Text를 넣을 공간</string>

    <!--toolbar_layout.xml-->
    <string name="toolbarLayout_title">타이틀</string>

    <!--dialog_add_contact.xml-->
    <string name="addContactFragmentDialog_add"><u>추가</u></string>
    <string name="addContactFragmentDialog_name">이름</string>
    <string name="addContactFragmentDialog_phoneNumber">전화번호</string>
    <string name="addContactFragmentDialog_email">이메일</string>
    <string name="addContactFragmentDialog_email_warning">이메일 양식을 확인해주세요</string>
    <string name="addContactFragmentDialog_memo">메모</string>
    <string name="addContactFragmentDialog_event">이벤트</string>
    <string name="addContactFragmentDialog_10">10분</string>
    <string name="addContactFragmentDialog_20">20분</string>
    <string name="addContactFragmentDialog_30">30분</string>
    <string name="addContactFragmentDialog_cancel">취소</string>
    <string name="addContactFragmentDialog_save">저장</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>