<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_rounded_corner_dialog"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/addContactDialog_profile_circleImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_user"
                app:civ_border_color="@color/blue"
                app:civ_border_overlay="true"
                app:civ_border_width="2dp" />


            <TextView
                android:id="@+id/addContactDialog_add_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/addContactFragmentDialog_add"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/addContactDialog_name_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:text="@string/addContactFragmentDialog_name"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp">

                <EditText
                    android:id="@+id/addContactDialog_name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_rouded_corner_edittext"
                    android:ems="10"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/addContactDialog_tel_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:text="@string/addContactFragmentDialog_phoneNumber"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp">

                <EditText
                    android:id="@+id/addContactDialog_tel_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_rouded_corner_edittext"
                    android:ems="10"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/addContactDialog_email_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/addContactFragmentDialog_email"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/addContactDialog_emailCheck_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:text="@string/addContactFragmentDialog_email_warning"
                    android:textColor="@color/red"
                    android:visibility="invisible" />


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp">

                <EditText
                    android:id="@+id/addContactDialog_email_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_rouded_corner_edittext"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/addContactDialog_memo_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:text="@string/addContactFragmentDialog_memo"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp">

                <EditText
                    android:id="@+id/addContactDialog_memo_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_rouded_corner_edittext"
                    android:ems="10"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/addContactDialog_event_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:text="@string/addContactFragmentDialog_event"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/addContactDialog_event_radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/addContactDialog_event_radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_radio_button"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/addContactFragmentDialog_10"
                    android:textColor="@drawable/selector_radio_text" />

                <RadioButton
                    android:id="@+id/addContactDialog_event_radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_radio_button"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/addContactFragmentDialog_20"
                    android:textColor="@drawable/selector_radio_text" />

                <RadioButton
                    android:id="@+id/addContactDialog_event_radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_radio_button"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/addContactFragmentDialog_30"
                    android:textColor="@drawable/selector_radio_text" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/addContactDialog_cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_confirm_button"
                    android:text="@string/addContactFragmentDialog_cancel"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/addContactDialog_save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_confirm_button"
                    android:enabled="false"
                    android:text="@string/addContactFragmentDialog_save"
                    android:textColor="@color/white" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>