<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/add_contact_fragment_dialog_rounded_corner_dialog"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/addContactFragmentDialog_profile_circleImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/add_contract_fragment_dialog_profileimage"
            app:civ_border_overlay="true"/>

        <TextView
            android:id="@+id/addContactFragmentDialog_add_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/addContactFragmentDialog_add"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/addContactFragmentDialog_name_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/addContactFragmentDialog_name"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/addContactFragmentDialog_name_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/add_contact_fragment_dialog_rouded_corner_edittext"
                android:ems="10"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/addContactFragmentDialog_tel_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/addContactFragmentDialog_phoneNumber"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/addContactFragmentDialog_tel_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/add_contact_fragment_dialog_rouded_corner_edittext"
                android:ems="10"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/addContactFragmentDialog_email_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/addContactFragmentDialog_email"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/addContactFragmentDialog_email_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/add_contact_fragment_dialog_rouded_corner_edittext"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/addContactFragmentDialog_event_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/addContactFragmentDialog_event"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/addContactFragmentDialog_event_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/add_contact_fragment_dialog_rouded_corner_edittext"
                android:ems="10"
                android:inputType="datetime" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addContactFragmentDialog_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="120dp"
                android:layout_weight="1"
                android:background="@drawable/add_contact_fragment_dialog_confirm_button"
                android:text="@string/addContactFragmentDialog_cancel"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addContactFragmentDialog_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:background="@drawable/add_contact_fragment_dialog_confirm_button"
                android:text="@string/addContactFragmentDialog_save"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>