<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <Button
        android:id="@+id/contact_detail_fragment_btn"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#00ff0000"
        android:drawableLeft="@drawable/ic_backbutton"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/textContactList"
        android:textSize="16sp"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/contact_detail_fragment_profile_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/ic_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contact_detail_fragment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/userName"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_detail_fragment_profile_icon" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/my_page_fragment_btn_message"
        android:layout_width="110dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/ic_button_shape"
        android:paddingTop="15dp"
        android:paddingBottom="12dp"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/ic_message_size"
        android:drawableTint="@color/blue"
        android:text="@string/message"
        android:textSize="13dp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/my_page_fragment_btn_phonecall"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_detail_fragment_name"
        tools:ignore="SpeakableTextPresentCheck"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/contact_detail_fragment_btn_phonecall"
        android:layout_width="110dp"
        android:layout_height="75dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/ic_button_shape"
        android:paddingTop="15dp"
        android:paddingBottom="12dp"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/ic_phonecall_size"
        android:drawableTint="@color/blue"
        android:text="@string/phoneCall"
        android:textSize="13dp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/my_page_fragment__btn_email"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/my_page_fragment_btn_message"
        app:layout_constraintTop_toBottomOf="@+id/contact_detail_fragment_name"
        tools:ignore="SpeakableTextPresentCheck"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/my_page_fragment__btn_email"
        android:layout_width="110dp"
        android:layout_height="75dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_button_shape"
        android:paddingTop="15dp"
        android:paddingBottom="12dp"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/ic_email_size"
        android:drawableTint="@color/blue"
        android:text="@string/email1"
        android:textSize="13dp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/my_page_fragment_btn_phonecall"
        app:layout_constraintTop_toBottomOf="@+id/contact_detail_fragment_name"
        tools:ignore="SpeakableTextPresentCheck"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_page_fragment_btn_message">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/my_page_fragment_cv_phone"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/textPhoneNumber"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contact_detail_fragment_tv_userphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/userPhoneNumber"
                    android:textColor="@color/blue" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/my_page_fragment_cv_email"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/my_page_fragment_cv_phone">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/textEmail"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contact_detail_fragment_tv_useremail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/userEmailAddress"
                    android:textColor="@color/blue" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/my_page_fragment_cv_email">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/textEvent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contact_detail_fragment_tv_userevent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/userEvent"
                    android:textColor="@color/blue" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>